--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@google/genai": "^1.15.0",
+    "@google/generative-ai": "^0.24.1",
     "@react-router/dev": "^7.7.1",
     "@react-router/node": "^7.7.1",
     "@react-router/serve": "^7.7.1",
@@ -21,6 +22,7 @@
     "clsx": "^2.1.1",
     "isbot": "^5.1.27",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.541.0",
     "mongodb": "^6.18.0",
     "multer": "^1.4.5-lts.1",
     "pdfjs-dist": "^5.4.54",
