--- a/package.json
+++ b/package.json
@@ -36,7 +36,14 @@
     "uuid": "^10.0.0",
     "vite": "^6.3.3",
     "vite-tsconfig-paths": "^5.1.4",
-    "zustand": "^5.0.8"
+    "zustand": "^5.0.8",
+    "@pinecone-database/pinecone": "^4.1.0",
+    "@langchain/community": "^0.3.7",
+    "@langchain/core": "^0.3.33",
+    "@langchain/google-genai": "^0.1.3",
+    "@langchain/pinecone": "^0.1.3",
+    "@huggingface/inference": "^4.7.1",
+    "langchain": "^0.3.7"
   },
   "devDependencies": {
     "@types/node": "^20",
